# cyak

./: .gitignore  .goreleaser.yml  .travis.yml  Cargo.toml  LICENSE  README.md  example.md  go.mod  go.sum  main.go  rustfmt.toml
cli/: cli.go
cli/actions/: actions.go
cli/assist/: assist.go
cli/commands/: commands.go
cli/dialog/: dialog.go
cli/flags/: flags.go
cli/questions/: questions.go
cmd/: main.go
commands/: add.go  add_questions.go  create.go  create_questions.go  interface.go  question_interface.go  questions.go  utils.go  validate.go
config/: config.go
cyak_cli/: Cargo.toml  build.rs
cyak_cli/src/: main.rs
cyak_cli/src/app/: app.rs  error.rs  mod.rs  traits.rs  ui.rs
cyak_cli/src/app/ui/: error.rs  menu.rs  mod.rs  views.rs
cyak_cli/src/cli/: cli.rs  error.rs  mod.rs  settings.rs  settings.sample.yaml
cyak_core/: Cargo.toml
cyak_core/src/: consts.rs  context.rs  error.rs  lang.rs  lib.rs  preset.rs  preset_config.rs  project.rs  project_config.rs  utils.rs  version.rs
cyak_gui/: Cargo.toml
install/: EnvVarUpdate.nsh  build.ps1  install.nsi  win-install.iss
internal/: config.go  helpers.go
internal/builder/: builder.go
internal/cli/: cli.go
internal/cli/actions/: actions.go
internal/cli/assist/: assist.go  assist_test.go
internal/cli/commands/: commands.go
internal/cli/dialog/: dialog.go
internal/cli/flags/: flags.go
internal/cli/questions/: questions.go
internal/config/: config.go
internal/licenses/: licenses.go
internal/preset/: preset.go
internal/template/: template.go
internal/templates/: templates.go
internal/types/: types.go
preset/: preset.go
presets/default/: config.template  executable.template  project.template
presets/default/asis/: .appveyor.yml  .travis.yml  LICENSE
presets/default/templates/: interface.template
share/cyak/presets/LazyMechanic/asis/: .clang-format  .gitignore  README.md
share/cyak/presets/LazyMechanic/licenses/: Apache2.license  GPLv2.license  GPLv3.license  ISC.license  MIT.license
share/cyak/presets/LazyMechanic/templates/: config.template.cmake  executable.template  executable.template.cmake  interface.template  library.template  project.template  test.template
share/cyak/presets/default/asis/: .appveyor.yml  .gitignore
share/cyak/presets/default/templates/: executable.template  interface.template  library.template  library.template.cmake  project.template  test.template
share/licenses/: GPLv2.license  GPLv3.license  ISC.license  MIT.license
share/presets/LazyMechanic/: config.yaml
share/presets/LazyMechanic/asis/: .clang-format  .gitignore  .travis.yml
share/presets/LazyMechanic/templates/: interface.hbs  library.hbs  project.hbs  test.hbs
share/presets/default/: config.yaml
share/presets/default/templates/: config.hbs  executable.hbs  interface.hbs  library.hbs  project.hbs  test.hbs
src/: cli.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/cli/: cli.rs  error.rs  mod.rs
src/app/tui/: ctx.rs  error.rs  event.rs  mod.rs  preset_config.rs  terminal.rs  tui.rs  ui.rs
src/app/tui/ui/: error.rs  menu.rs  menu_box.rs  mod.rs  stateful_list.rs
src/app/tui/ui/components/: input.rs  menu.rs  mod.rs
src/config/: config.rs  consts.rs  mod.rs
src/tui/: mod.rs
targets/: executable.go  interface.go  library.go  project.go  targets.go  targets_interface.go  test.go  validate.go
template/: template.go
templates/: BuildHelpers.cmake  Executable.txt.template  General.txt.template  Interface.txt.template
tests/: .gitignore  Cargo.toml  build.rs
tests/stuff/09ab03d0-b610-4364-bbe9-4896383230cf/: config.yaml
tests/tests/: common.rs  generate_project.rs  preset.rs  project.rs
(+1 files in other folders)
