[package]
name = "cyak_cli"
version = "0.1.0"
authors = ["LazyMechanic <AsharnRus@gmail.com>"]
edition = "2018"

[[bin]]
name = "cyak"
path = "src/main.rs"

[build-dependencies]
fs_extra = { version = "1.1" }
anyhow = { version = "1.0" }

[dependencies.cyak_core]
path = "../cyak_core"

[dependencies]
anyhow = { version = "1.0" }
config = { version = "0.10" }
cursive = { version = "0.15.0", default-features = false }
clap = { version = "2.33" }
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
fs_extra = { version = "1.1" }
url = { version = "2.1" }

[features]
default = ["pancurses-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion"]
