[package]
name = "cyak_core"
version = "0.1.0"
authors = ["LazyMechanic <AsharnRus@gmail.com>"]
edition = "2018"

[lib]
name = "cyak_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = "3.2"
thiserror = "1.0"