[package]
name = "cyak_core"
version = "0.1.0"
authors = ["LazyMechanic <AsharnRus@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }
handlebars = "3.2"
thiserror = "1.0"
fs_extra = "1.1"